apps/paperless/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx
  namespace: paperless
  labels: &labels
    app.kubernetes.io/component: paperless-ngx
    app.kubernetes.io/name: paperless
spec:
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
      - name: paperless-ngx
        image: ghcr.io/paperless-ngx/paperless-ngx:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 1000m
            memory: 500Mi
        ports:
        - containerPort: 8000
          name: web

        volumeMounts:
        - name: data 
          mountPath: /usr/src/paperless/data
        - name: media
          mountPath: /usr/src/paperless/media
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: paperless-data-pvc
        - name: media
          persistentVolumeClaim:
            claimName: paperless-media-pvc
      restartPolicy: Always
---
