apps/paperless/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless
  namespace: paperless
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`paperless.rookian.me`)
    kind: Rule
    services:
    - name: paperless-ngx
      port: 8000
