apps/paperless/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  namespace: paperless
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-staging
spec:
  tls:
  - hosts:
    - paperless.rookian.me
    secretName: tls-paperless-rookian-me
  rules:
  - host: paperless.rookian.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: paperless-ngx
            port:
              name: web
